# Tauri-Rust-Project

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.module.scss  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: pal-hub.sqlite
src-tauri/src/: lib.rs  main.rs  pal_database.rs
src/components/MainContent/: MainContent.module.scss  MainContent.tsx
src/components/MainContent/pages/breeding/: BreedingPage.tsx  index.module.scss
src/components/MainContent/pages/glossary/: GlossaryPage.tsx  index.module.scss
src/components/MainContent/pages/map/: MapPage.tsx  index.module.scss  mapAssets.ts
src/components/MainContent/pages/wiki/: PalDetailDrawer.tsx  WikiPage.tsx  index.module.scss  palData.ts  palRepository.ts
src/components/Sidebar/: Sidebar.module.scss  Sidebar.tsx
src/components/TitleBar/: TitleBar.module.scss  TitleBar.tsx
src/components/TopBar/: TopBar.module.scss  TopBar.tsx
src/i18n/: index.ts  resources.ts
src/styles/: global.scss  variables.scss
